<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    tools:context=".settings.Settings"
    android:fitsSystemWindows="true"
    android:background = "@color/dark"
    android:layout_height="match_parent">

 <com.google.android.material.appbar.AppBarLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
>

     <com.google.android.material.appbar.CollapsingToolbarLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:textAlignment="center"
         app:contentScrim="@color/dark"
         app:layout_scrollFlags="scroll|exitUntilCollapsed">


         <!-- Toolbar -->
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_collapseMode="pin"
             app:title="Settings" />

     </com.google.android.material.appbar.CollapsingToolbarLayout>

 </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/settings"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/Heading_setings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_artitecture"
                app:layout_anchor="@+id/nestedScrollView2"
                app:layout_anchorGravity="center" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/xposedmode"
                style="@style/metarialTogglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:tooltipText="@string/_32_bit_mode_xposed_experimental"
                android:layout_marginTop="8dip"
                android:drawableStart="@drawable/ic_bit"
                android:minHeight="48dp"
                android:text="@string/_32_bit_mode_xposed_experimental" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/ptracemode"
                style="@style/metarialTogglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dip"
                android:drawableStart="@drawable/ic_bit"
                android:minHeight="48dp"
                android:text="@string/_64_bit_mode_ptrace_recomended"
                android:textAlignment="center" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/emulatormode"
                style="@style/metarialTogglebutton"
                android:layout_width="match_parent"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dip"
                android:drawableStart="@drawable/ic_bit"
                android:minHeight="48dp"
                android:text="@string/x86_mode_for_emulators_beta"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/cache"
                style="@style/Heading_setings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malicious"
                app:layout_anchor="@+id/nestedScrollView2"
                app:layout_anchorGravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/clearcache"
                    style="@style/Heading_setings"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:onClick="cleardust"
                    android:tooltipText="@string/clear_cache_files"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxHeight="80dp"
                    android:minHeight="45dp"
                    android:gravity="center"
                    android:drawablePadding="10dp"
                    android:fontFamily="monospace"
                    android:text="@string/clear_cache_files"
                    app:layout_anchor="@+id/nestedScrollView2"
                    app:layout_anchorGravity="center"
                    app:drawableLeftCompat="@drawable/dustbean"
                    tools:ignore="UnusedAttribute" />
                <TextView
                    android:id="@+id/report"
                    style="@style/Heading_setings"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:tooltipText="@string/support_me"
                    tools:ignore="UnusedAttribute"
                    android:maxHeight="80dp"
                    android:minHeight="45dp"
                    android:gravity="center"
                    android:onClick="report"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="10dp"
                    android:fontFamily="monospace"
                    android:text="@string/support_me"
                    app:layout_anchor="@+id/nestedScrollView2"
                    app:layout_anchorGravity="center"
                    app:drawableLeftCompat="@drawable/baseline_error_24" />


            </LinearLayout>


        </LinearLayout>








    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>